Adds PostgreSQL, Env variables, fixes issues with swagger
