# product-api/cmd/api/handlers/delete.go
@@ -12,7 +12,7 @@ import (
 // responses:
 //	201: noContentResponse
 //  404: errorResponse
-//  501: errorResponse
+//  500: errorResponse
 
 // Delete handles DELETE requests and removes items from the database
 func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
