# product-api/swagger.yaml
@@ -12,10 +12,10 @@ definitions:
         type: object
         x-go-package: github.com/notoriouscode97/go-microservices/product-api/sdk/models
     Product:
-        description: Product Product defines the structure for an API product
+        description: Product defines the structure for an API product
         properties:
             description:
-                description: the description for this poduct
+                description: the description for this product
                 maxLength: 10000
                 type: string
                 x-go-name: Description
@@ -26,13 +26,13 @@ definitions:
                 type: integer
                 x-go-name: ID
             name:
-                description: the name for this poduct
+                description: the name for this product
                 maxLength: 255
                 type: string
                 x-go-name: Name
             price:
                 description: the price for the product
-                format: float
+                format: double
                 minimum: 0.01
                 type: number
                 x-go-name: Price
@@ -46,7 +46,7 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/notoriouscode97/go-microservices/product-api/sdk/models
+        x-go-package: github.com/notoriouscode97/go-microservices/product-api/cmd/api/data
     ValidationError:
         description: ValidationError ValidationError is a collection of validation error messages
         properties:
@@ -92,11 +92,11 @@ paths:
                   schema:
                     $ref: '#/definitions/Product'
             responses:
-                "200":
+                "201":
                     $ref: '#/responses/productResponse'
                 "422":
                     $ref: '#/responses/errorValidation'
-                "501":
+                "500":
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
@@ -113,7 +113,7 @@ paths:
                   schema:
                     $ref: '#/definitions/Product'
             responses:
-                "201":
+                "204":
                     $ref: '#/responses/noContentResponse'
                 "404":
                     $ref: '#/responses/errorResponse'
@@ -138,7 +138,7 @@ paths:
                     $ref: '#/responses/noContentResponse'
                 "404":
                     $ref: '#/responses/errorResponse'
-                "501":
+                "500":
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
@@ -163,6 +163,8 @@ paths:
                 "200":
                     $ref: '#/responses/productResponse'
                 "404":
+                    $ref: '#/responses/errorResponse'
+                "500":
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
